2003-12-19  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Moved warning for actions / validators with unknown context types to
     ControllerBase so that it is invoked only when metadata files are loaded.

2003-12-16  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Added more descriptive error message for "No controller state available"

   * Added license.

2003-12-03  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Changed exception for actions / validators with unknown context types to
     a warning, since there appear to be times at which the complete list of
     types is unavailable (e.g. during site copying / moving)

2003-12-02  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Strip acquisition layers from actions and validators before doing
     ZODB clone

2003-11-12  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * FormController.py: Fixed bug in addFormValidators (thanks alienoid)

   * Added code to report file in which metadata errors occur.

2003-10-29  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Fixed code that tests for existence of validators and objects being 
     traversed to.  You'll get a helpful ValueError now instead of a cryptic
     Unauthorized exception when things aren't found.

   * Dump the full file name to the log when a .metadata file's [actions] or
     [validators] sections can't be read properly.

   * Fixed the version number.  D'oh.

2003-10-25  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Fixed validation for scripts so that it will work when scripts are called
     programmatically and/or from unit tests (e.g. without a REQUEST)

   * Added missing initial self.validators and self.actions to 
     ControllerPythonScripts

2003-10-24  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Modified the getError/setError methods in FormControllerState to be more
     tolerant of non-i18ned error messages.

   * Updated info about CMF 1.3 installation thanks to more info from Laurent